src/components/signature-area/signature-area.scss
signature-area {
  min-height: 150px;
  signature-pad{
    width: 100%;
    canvas {
      background: transparent;
      border-radius: 4px;
      border: 2px solid map-get($colors, dark);
      box-shadow: inset 0 3px 3px 0 #a5a2a2;
      height: 256px;
      width: 100%;
      position: relative;
      z-index: 10;
      margin-bottom: -6px;
    }
    &.ng-dirty {
      &.ng-invalid {
        canvas {
          border: 4px solid map-get($colors, mes-validation-error) !important;
          box-shadow: inset 0 0px 0px 0 #a5a2a2;
        }
      }
    }
  }

  .retry-button {
    .retry-icon {
      width: 20px;
      height: 20px;
      float: left;
      background-size: contain;
    }
  }

    .signature-line {
      border-top: 1px solid #979797;
      height: 2px;
      width: 90%;
      bottom: 30%;
      position: absolute;
    }
  

  .retry-button {
    display: flex;
    float: right;
    background-color: transparent;
    &:disabled {
      color: map-get($colors, darkerGrey);
      background-color: rgba(0, 0, 0, 0);
    }
    .retry-icon {
      align-self: center;
      background-repeat: no-repeat;
      padding-right: 29px;
      &:disabled {
        color: map-get($colors, darkerGrey);
        background-color: rgba(131, 131, 131, 0);
      }
    }
    .sign-here-text {
      align-self: center;
    }
  }
  .signature-wrapper {
    flex-direction: column;
    position: relative;
  }
}

